WCAG: adhere to aria-allowed-attr rule in .nav-collapsible

--- a/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -38,9 +38,14 @@
 
                 <div class="col-md-4 col-lg-3">
                     <nav class="footer-links nav-collapsible" aria-labelledby="footer-info-heading">
-                        <h4 id="footer-info-heading" class="footer-title nav-toggler collapsed" 
-                            data-toggle="collapse" data-target="#footer-info" 
-                            aria-controls="footer-info" aria-expanded="false" role="button" tabindex="0">
+                        <h4 id="footer-info-heading" 
+                            class="footer-title nav-toggler collapsed" 
+                            data-toggle="collapse" 
+                            data-target="#footer-info" 
+                            aria-controls="footer-info" 
+                            aria-expanded="false" 
+                            role="button" 
+                            tabindex="0">
                             @Html.Raw(T("Footer.Info"))
                         </h4>
                         <div class="collapse nav-collapse" id="footer-info" role="region" aria-labelledby="footer-info-heading">
@@ -51,9 +56,14 @@
 
                 <div class="col-md-4 col-lg-3">
                     <nav class="footer-links nav-collapsible" aria-labelledby="footer-service-heading">
-                        <h4 id="footer-service-heading" class="footer-title nav-toggler collapsed" 
-                            data-toggle="collapse" data-target="#footer-service" 
-                            aria-controls="footer-service" aria-expanded="false" role="button" tabindex="0">
+                        <h4 id="footer-service-heading" 
+                            class="footer-title nav-toggler collapsed" 
+                            data-toggle="collapse" 
+                            data-target="#footer-service" 
+                            aria-controls="footer-service" 
+                            aria-expanded="false" 
+                            role="button" 
+                            tabindex="0">
                             <span class="d-none d-md-block">@Html.Raw(T("Footer.Service"))</span>
                             <span class="d-md-none">@Html.Raw(T("Footer.Service.Mobile"))</span>
                         </h4>
@@ -65,9 +75,14 @@
 
                 <div class="col-md-4 col-lg-3">
                     <nav class="footer-links nav-collapsible" aria-labelledby="footer-company-heading">
-                        <h4 id="footer-company-heading" class="footer-title nav-toggler collapsed" 
-                            data-toggle="collapse" data-target="#footer-company" 
-                            aria-controls="footer-company" aria-expanded="false" role="button" tabindex="0">
+                        <h4 id="footer-company-heading" 
+                            class="footer-title nav-toggler collapsed" 
+                            data-toggle="collapse" 
+                            data-target="#footer-company" 
+                            aria-controls="footer-company" 
+                            aria-expanded="false" 
+                            role="button" 
+                            tabindex="0">
                             <span class="d-none d-md-block">@Html.Raw(T("Footer.Company"))</span>
                             <span class="d-md-none">@Html.Raw(T("Footer.Company.Mobile"))</span>
                         </h4>
@@ -86,9 +101,14 @@
                                   data-subscription-failure="@T("Newsletter.SubscriptionFailed")"
                                   aria-labelledby="newsletter-subscribe-heading">
                                 <div class="footer-newsletter nav-collapsible">
-                                    <h4 id="newsletter-subscribe-heading" class="footer-title nav-toggler collapsed"
-                                        data-toggle="collapse" data-target="#newsletter-body"
-                                        aria-controls="newsletter-body" aria-expanded="false" role="button" tabindex="0">
+                                    <h4 id="newsletter-subscribe-heading" 
+                                        class="footer-title nav-toggler collapsed"
+                                        data-toggle="collapse" 
+                                        data-target="#newsletter-body"
+                                        aria-controls="newsletter-body" 
+                                        aria-expanded="false" 
+                                        role="button" 
+                                        tabindex="0">
                                         @Html.Raw(T("Newsletter.Title"))
                                     </h4>
                                     <div id="newsletter-body" class="collapse nav-collapse" role="region" aria-labelledby="newsletter-subscribe-heading">
@@ -142,9 +162,14 @@
 
                         <div sm-if="Model.ShowThemeSelector" class="col-12 col-md col-lg-12">
                             <div class="theme-selector nav-collapsible">
-                                <h4 id="theme-selector-heading" class="footer-title nav-toggler collapsed"
-                                    data-toggle="collapse" data-target="#footer-themes" 
-                                    aria-controls="footer-themes" aria-expanded="false" role="button" tabindex="0">
+                                <h4 id="theme-selector-heading" 
+                                    class="footer-title nav-toggler collapsed"
+                                    data-toggle="collapse" 
+                                    data-target="#footer-themes" 
+                                    aria-controls="footer-themes" 
+                                    aria-expanded="false" 
+                                    role="button" 
+                                    tabindex="0">
                                     @Html.Raw(T("Footer.Themes"))
                                 </h4>
                                 <div id="footer-themes" class="content collapse nav-collapse" role="region" aria-labelledby="theme-selector-heading">
