--- a/src/Smartstore.Web/Views/Shared/Partials/_ClientRes.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/_ClientRes.cshtml
@@ -25,6 +25,8 @@
         "Common.CopyToClipboard.Succeeded",
         "Products.Longdesc.More",
         "Products.Longdesc.Less",
+        "Aria.Label.ShowPassword",
+        "Aria.Label.HidePassword",
         "Jquery.Validate.Email",
         "Jquery.Validate.Required",
         "Jquery.Validate.Remote",
