WCAG: .art-drop: don't let tooltips flip to prevent accidental drop close

--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Buttons.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.Buttons.cshtml
@@ -27,8 +27,12 @@
                     class="btn btn-primary ajax-cart-link px-sm-2 @cssClasses add-to-cart-button"
                     aria-label="@title - @Model.Name"
                     title="@title" 
-                    data-toggle='@(!blockStyle ? "tooltip" : "")' data-placement="bottom"
-                    data-type="cart" data-action="add">
+                    data-toggle='@(!blockStyle ? "tooltip" : "")'
+                    data-placement="bottom"
+                    data-fallback-placement="clockwise"
+                    data-boundary="window"
+                    data-type="cart" 
+                    data-action="add">
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
                 @if (blockStyle)
                 {
@@ -44,11 +48,14 @@
         {
             var callForPriceTitle = T("Products.CallForPrice.GoToForm");
             <a href="@Url.Action("AskQuestion", "Product", new { id = Model.Id, area = "" })"
-                class="btn @(blockStyle ? "btn-light" : "btn-gray") @cssClasses"
-                data-toggle='@(!blockStyle ? "tooltip" : "")' data-placement="bottom"
-                rel="nofollow"
-                title="@callForPriceTitle"
-                aria-label="@callForPriceTitle - @Model.Name">
+               class="btn @(blockStyle ? "btn-light" : "btn-gray") @cssClasses"
+               data-toggle='@(!blockStyle ? "tooltip" : "")' 
+               data-placement="bottom"
+               data-fallback-placement="clockwise"
+               data-boundary="window"
+               rel="nofollow"
+               title="@callForPriceTitle"
+               aria-label="@callForPriceTitle - @Model.Name">
                 <i class="fa fa-question" aria-hidden="true"></i>
 
                 @if (blockStyle)
@@ -82,12 +89,16 @@
     {
         var wishlistTitle = T("Categories.Wishlist");
         <button data-href='@Url.Action("AddProductSimple", "ShoppingCart", new { productId = Model.Id, shoppingCartTypeId = (int)ShoppingCartType.Wishlist , area = "" })'
-           class="btn btn-secondary btn-lg art-btn col ajax-cart-link add-to-wishlist-button focus-inset" 
-           type="button"
-           aria-label="@wishlistTitle - @Model.Name"
-           title="@wishlistTitle"
-           data-toggle="tooltip" data-placement="bottom"
-           data-type="wishlist" data-action="add">
+                class="btn btn-secondary btn-lg art-btn col ajax-cart-link add-to-wishlist-button focus-inset" 
+                type="button"
+                aria-label="@wishlistTitle - @Model.Name"
+                title="@wishlistTitle"
+                data-toggle="tooltip" 
+                data-placement="bottom"
+                data-fallback-placement="clockwise"
+                data-boundary="window"
+                data-type="wishlist" 
+                data-action="add">
             <i class="fal fa-heart" aria-hidden="true"></i>
         </button>
     }
@@ -104,8 +115,12 @@
                 type="button"
                 aria-label="@compareTitle - @Model.Name"
                 title="@compareTitle" 
-                data-toggle="tooltip" data-placement="bottom"
-                data-type="compare" data-action="add">
+                data-toggle="tooltip" 
+                data-placement="bottom"
+                data-fallback-placement="clockwise"
+                data-boundary="window"
+                data-type="compare" 
+                data-action="add">
             <i class="fa fa-retweet" aria-hidden="true"></i>
         </button>
     }
@@ -118,7 +133,10 @@
        class="btn btn-secondary btn-lg art-btn col product-details-button focus-inset"
        title="@detailsTitle"
        aria-label="@detailsTitle - @Model.Name"
-       data-toggle="tooltip" data-placement="bottom">
+       data-toggle="tooltip" 
+       data-placement="bottom"
+       data-fallback-placement="clockwise"
+       data-boundary="window">
         <i class="fa fa-info" aria-hidden="true"></i>
     </a>
 </div>
