--- a/src/Smartstore.Web/Views/Identity/RegisterResult.cshtml
+++ b/src/Smartstore.Web/Views/Identity/RegisterResult.cshtml
@@ -14,7 +14,7 @@
     </div>
 
     <div class="page-body">
-        <p class="section-body">
+        <p class="section-body" role="alert">
             @Html.Raw(ViewBag.RegisterResult)
         </p>
 
