WCAG: Added some `role=alert`

--- a/src/Smartstore.Web/Views/Error/AccessDenied.cshtml
+++ b/src/Smartstore.Web/Views/Error/AccessDenied.cshtml
@@ -9,7 +9,7 @@
     <div class="page-title">
         <h1 class="text-muted" style="font-size: 60px; line-height: 90px">@T("Admin.AccessDenied.Title")</h1>
     </div>
-    <p class="page-body lead fs-h4 error">
+    <p class="page-body lead fs-h4 error" role="alert">
         <strong>Controller:</strong> @Model.ControllerName.NaIfEmpty(),
         <strong>Action:</strong> @Model.ActionName.NaIfEmpty()
         @{
