--- a/src/Smartstore.Web/Views/Error/NotFound.cshtml
+++ b/src/Smartstore.Web/Views/Error/NotFound.cshtml
@@ -7,7 +7,7 @@
     <div class="page-title">
         <h1 class="text-muted" style="font-size: 220px; line-height: 280px">@T("NotFoundPage.Title")</h1>
     </div>
-    <p class="page-body lead fs-h4">
+    <p class="page-body lead fs-h4" role="alert">
         @T("NotFoundPage.Body")
     </p>
 
