--- a/src/Smartstore.Web/Views/Home/ContactUs.cshtml
+++ b/src/Smartstore.Web/Views/Home/ContactUs.cshtml
@@ -20,7 +20,7 @@
             <div class="col-md-6">
                 @if (Model.SuccessfullySent)
                 {
-                    <div class="alert alert-success">
+                    <div class="alert alert-success" role="alert">
                         @Model.Result
                     </div>
                 }
