--- a/src/Smartstore.Web/Views/Home/StoreClosed.cshtml
+++ b/src/Smartstore.Web/Views/Home/StoreClosed.cshtml
@@ -9,7 +9,7 @@
     <div class="page-title">
         <h1>@T("StoreClosed")</h1>
     </div>
-    <div class="page-body">
+    <div class="page-body" role="alert">
         @T("StoreClosed.Hint")
     </div>
 </div>
