WCAG: Billing & shipping address selection pages

--- a/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/BillingAddress.cshtml
@@ -35,16 +35,17 @@
                     <partial name="ShippingAddressDiffers" />
                 }
 
-                <div class="row card-grid g-3 row-cols-1 row-cols-md-2 row-cols-lg-3 address-list">
+                <div class="row card-grid g-3 row-cols-1 row-cols-md-2 row-cols-lg-3 address-list" role="list">
                     @foreach (var item in Model.ExistingAddresses)
                     {
                         <div class="col">
                             <div class="card card-body address-list-item">
-                                <div class="address-item">
+                                <div class="address-item" role="listitem">
                                     <button class="btn btn-warning btn-block select-billing-address-button"
-                                    data-url="@Url.Action("SelectBillingAddress", new { addressId = item.Id })">
+                                            data-url="@Url.Action("SelectBillingAddress", new { addressId = item.Id })"
+                                            aria-label="@T("Checkout.BillToThisAddress"): @(item.FormattedAddress.Replace("<br>", ", ").RemoveHtml())">
                                         <span>@T("Checkout.BillToThisAddress")</span>
-                                        <i class="fa fa-angle-right"></i>
+                                        <i class="fa fa-angle-right" aria-hidden="true"></i>
                                     </button>
 
                                     <div class="address-data mt-3">
@@ -76,7 +77,7 @@
                         </div>
                     }
 
-                    <div class="col">
+                    <div class="col" role="listitem">
                         <partial name="AddAddressButton" />
                     </div>
                 </div>
@@ -84,7 +85,7 @@
 
             <zone name="checkout_billing_address_middle" />
 
-            <fieldset class="content-group cnt-add-new-address pt-3" attr-style='(Model.HasAddresses && ViewData.ModelState.IsValid, "display:none")'>
+            <fieldset id="cnt-add-new-address" class="content-group pt-3" attr-style='(Model.HasAddresses && ViewData.ModelState.IsValid, "display:none")'>
                 <legend><span>@T(Model.HasAddresses ? "Checkout.OrEnterNewAddress" : "Checkout.EnterBillingAddress")</span></legend>
                 @if (!Model.HasAddresses && Model.IsShippingRequired)
                 {
