WCAG: Shipping method list

--- a/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -194,7 +194,7 @@
     <div class="footer-bottom-wrapper">
         <div class="container footer-bottom">
             <div class="hstack column-gap-3 row-gap-1 justify-content-between flex-wrap flex-md-nowrap">
-                <div sm-if="Model.ShowLegalInfo">
+                <div sm-if="Model.ShowLegalInfo" id="footer-legal-info">
                     @Html.Raw(Model.LegalInfo)
                 </div>
 
