--- a/src/Smartstore.Web/Views/Checkout/Partials/ShippingMethodList.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/ShippingMethodList.cshtml
@@ -6,59 +6,75 @@
 
 @if (Model.Warnings.Count > 0)
 {
-    <div class="alert alert-danger">
+    <div class="alert alert-danger" role="alert">
         <ul>
             @foreach (var warning in Model.Warnings)
             {
-                <li>@warning</li>
+                <li>
+                    <span class="sr-only">@T("Admin.Common.Errors"): </span>
+                    @warning
+                </li>
             }
         </ul>
     </div>
 }
 else
 {
-    <ul class="list-group opt-list shipping-options">
-        @for (int i = 0; i < Model.ShippingMethods.Count; i++)
-        {
-            var shippingMethod = Model.ShippingMethods[i];
+    <fieldset role="radiogroup">
+        <legend class="sr-only">
+            @T("Checkout.SelectShippingMethod")
+        </legend>
+        <ul class="list-group opt-list shipping-options">
+            @for (int i = 0; i < Model.ShippingMethods.Count; i++)
+            {
+                var shippingMethod = Model.ShippingMethods[i];
 
-            <li class="list-group-item opt-list-item shipping-option-item" attr-class='(shippingMethod.Selected, "active")'>
-                <div class="opt-data">
-                    <div class="form-check opt-control option-name radio">
-                        <input id="shippingoption_@(i)" type="radio" name="shippingoption"
-                                class="opt-radio form-check-input"
-                                attr-checked='(shippingMethod.Selected, "checked")'
-                                value="@(shippingMethod.ShippingMethodId)___@(shippingMethod.ShippingRateComputationMethodSystemName)" />
-                        <label class="form-check-label" for="shippingoption_@(i)">
-                            <span class="opt-name">@Html.Raw(shippingMethod.Name.HtmlDecode())</span>
-                        </label>
-                    </div>
-
-                    <div sm-if="shippingMethod.Fee > decimal.Zero" class="opt-fee shipping-fee badge badge-danger ml-auto">
-                        @shippingMethod.Fee
-                    </div>
-                </div>
-
-                <div sm-if="shippingMethod.Description.HasValue()" class="opt-info text-muted shipping-option-description">
-                    @if (shippingMethod.BrandUrl.HasValue())
-                    {
-                        <div class="media">
-                            <span class="float-left">
-                                <img class="media-object img-fluid" src="@Url.Content(shippingMethod.BrandUrl)" alt="@shippingMethod.Name" />
-                            </span>
-                            <div class="media-body">
-                                @Html.Raw(shippingMethod.Description)
-                            </div>
+                <li class="list-group-item opt-list-item shipping-option-item" attr-class='(shippingMethod.Selected, "active")'>
+                    <div class="opt-data">
+                        <div class="form-check opt-control option-name radio">
+                            <input id="shippingoption_@(i)"
+                                   type="radio"
+                                   name="shippingoption"
+                                   class="opt-radio form-check-input"
+                                   attr-checked='(shippingMethod.Selected, "checked")'
+                                   value="@(shippingMethod.ShippingMethodId)___@(shippingMethod.ShippingRateComputationMethodSystemName)"
+                                   aria-describedby="@(shippingMethod.Fee > decimal.Zero ? ("shipping-fee" + shippingMethod.ShippingMethodId + " ") : "")shipping-desc-@shippingMethod.ShippingMethodId" />
+                            <label class="form-check-label" for="shippingoption_@(i)">
+                                <span class="opt-name">@Html.Raw(shippingMethod.Name.HtmlDecode())</span>
+                            </label>
                         </div>
-                    }
-                    else
-                    {
-                        @Html.Raw(shippingMethod.Description);
-                    }
-                </div>
-            </li>
-        }
-    </ul>
+
+                        <div sm-if="shippingMethod.Fee > decimal.Zero"
+                             id="shipping-fee@(shippingMethod.ShippingMethodId)"
+                             class="opt-fee shipping-fee badge badge-danger ml-auto"
+                             aria-describedby="footer-legal-info">
+                            @shippingMethod.Fee
+                        </div>
+                    </div>
+
+                    <div sm-if="shippingMethod.Description.HasValue()"
+                         id="shipping-desc-@shippingMethod.ShippingMethodId"
+                         class="opt-info text-muted shipping-option-description">
+                        @if (shippingMethod.BrandUrl.HasValue())
+                        {
+                            <div class="media">
+                                <span class="float-left">
+                                    <img class="media-object img-fluid" src="@Url.Content(shippingMethod.BrandUrl)" alt="@shippingMethod.Name" />
+                                </span>
+                                <div class="media-body">
+                                    @Html.Raw(shippingMethod.Description)
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            @Html.Raw(shippingMethod.Description);
+                        }
+                    </div>
+                </li>
+            }
+        </ul>
+    </fieldset>
 }
 
 <zone name="checkout_shipping_method_content_after" />
