WCAG review: Billing & shipping

--- a/src/Smartstore.Web/Views/Checkout/Partials/AddAddressButton.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/AddAddressButton.cshtml
@@ -8,7 +8,7 @@
     <div class="mt-auto">
         <button type="button" class="btn btn-primary btn-block add-new-address align-self-end" aria-controls="cnt-add-new-address" aria-expanded="false">
             <span>@T("Admin.Customers.Customers.Addresses.AddNew")</span>
-            <i class="fa fa-angle-right"></i>
+            <i class="fa fa-angle-right" aria-hidden="true"></i>
         </button>
     </div>
 </div>
