--- a/src/Smartstore.Web/Views/Checkout/Partials/AddressScript.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Partials/AddressScript.cshtml
@@ -21,18 +21,16 @@
             return false;
         });
 
-        $('.new-address-next-step-button').on('click', function () {
+        $('.new-address-next-step-button').on('click', () => {
             $('#nextstep').trigger('click');
             return false;
         });
 
-        $('.add-new-address').on('click', function (e) {
+        $('.add-new-address').on('click', (e) => {
             e.preventDefault();
             $(e.currentTarget).aria("expanded", "true");
             const cntNewAddress = $('#cnt-add-new-address');
-            cntNewAddress.slideDown(function () {
-                cntNewAddress.find(".address-form input:first").focus();
-            });
+            cntNewAddress.slideDown(() => cntNewAddress.find(".address-form input:first").focus());
             return false;
         });
 
